package ru.avalon.devj110.listdemo.enums;

public enum JustificationTypes {
    LEFT_TO_RIGHT,
    RIGHT_TO_LEFT,
    CENTER
}
