package ru.avalon.devj110.listdemo.interfaces.general;

public interface Dumpable {
    String getMemoryDump();
}
